fix: address code review comments in PR #340
- Remove outdated Cloudflare Git Integration reference in CONTACT_FORM_SETUP.md
  (contradicts decommissioning goal from issue #332)
- Fix uvicorn module path in packages/api/main.py from 'src.main:app'
  to 'packages.api.src.main:app' to match package structure
- Update ACM ConfigMaps (dev, staging, prod) to use ${ACM_CERTIFICATE_ARN}
  placeholder with improved documentation for dynamic population via Terraform
- Fix kubernetes/overlays/prod/kustomization.yaml:
  - Change from 'labels' with 'pairs' to simpler 'commonLabels' format
  - Parameterize TLS hosts to use ${PROD_DOMAIN_NAME} and ${PROD_API_DOMAIN_NAME}
    instead of hardcoded 'lornu.ai' and 'api.lornu.ai' to avoid example values in prod
- Update staging ACM ConfigMap label from 'plan-a-orchestration' to 'terraform-cloud'
  for consistency with project standards
- Delete DEPLOY_STAGE1_STAGE2.sh and DEPLOYMENT_PR320.md
  (referenced wrong PR #320 and branch name, not applicable to this PR)

--- a/kubernetes/overlays/prod/acm-cert-configmap.yaml
+++ b/kubernetes/overlays/prod/acm-cert-configmap.yaml
@@ -8,6 +8,6 @@ metadata:
     lornu.ai/managed-by: plan-a-orchestration
     lornu.ai/asset-id: lornu-ai-final-clear-bg
 data:
-  # ALB listener certificate ARN for HTTPS
-  # Replace with actual ACM certificate ARN from AWS
-  certificate-arn: "arn:aws:acm:us-east-1:ACCOUNT_ID:certificate/CERT_ID"
+  # ALB listener certificate ARN for HTTPS.
+  # Populated by Terraform/CI at deploy time with the actual ACM certificate ARN from AWS
+  certificate-arn: "${ACM_CERTIFICATE_ARN}"
