--- a/kubernetes/overlays/dev/acm-cert-configmap.yaml
+++ b/kubernetes/overlays/dev/acm-cert-configmap.yaml
@@ -8,6 +8,8 @@ metadata:
     lornu.ai/managed-by: plan-a-orchestration
     lornu.ai/asset-id: lornu-ai-final-clear-bg
 data:
-  # ALB listener certificate ARN for HTTPS
-  # Replace with actual ACM certificate ARN from AWS
-  certificate-arn: "arn:aws:acm:us-east-1:ACCOUNT_ID:certificate/CERT_ID"
+  # ALB listener certificate ARN for HTTPS.
+  # PLACEHOLDER: this value is populated by Terraform with the actual ACM
+  # certificate ARN at deployment time (for example via a templated ConfigMap).
+  # Do not apply this manifest as-is without providing ACM_CERTIFICATE_ARN.
+  certificate-arn: "${ACM_CERTIFICATE_ARN}"
