fix(e2e): start backend API server in CI workflow
- Update GitHub Actions workflow to start backend API before E2E tests
- Add Python/uv setup steps to install backend dependencies
- Start backend server and verify health endpoint before running tests
- Keep Playwright webServer for frontend only (simpler config)

This ensures the /api/health endpoint is available during E2E tests

--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -55,6 +55,28 @@ jobs:
       - name: Install Playwright Browsers
         run: bun run playwright install --with-deps
 
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install uv
+        run: pip install uv
+
+      - name: Install Backend Dependencies
+        run: |
+          cd ../..
+          uv sync --frozen --no-dev
+
+      - name: Start Backend API Server
+        run: |
+          cd ../..
+          uv run -- uvicorn packages.api.main:app --host 0.0.0.0 --port 8080 &
+          sleep 5
+          curl -f http://localhost:8080/api/health || exit 1
+        env:
+          PORT: 8080
+
       - name: Run Playwright Tests
         run: bun run playwright test
         env:
