feat: TFC Configuration Versioning & GHA Branch Synchronization (Issue #354)
Implement CLI-driven TFC workflow standardization and configuration version sync.

Phase 1: TFC Sync Workflow ✅
- Created .github/workflows/tfc-sync.yml
- Automatically syncs configuration versions on push to main/kustomize
- Creates speculative plans to prime TFC UI for manual runs
- Supports both AWS (lornu-ai) and GCP (gcp-lornu-ai) workspaces

Phase 2: Workflow Updates ✅
- Updated terraform-aws-prod.yml to trigger on push to main/kustomize
- All workflows now reference main/kustomize (no master references)

Phase 3: Documentation ✅
- Created docs/TFC_MANUAL_RUNS.md with manual run instructions
- Updated .github/system-instruction.md with TFC CLI-driven standard
- Updated README.md with TFC manual runs section

Features:
- Configuration version refresh on every push to protected branches
- Manual TFC UI runs guaranteed to use latest code
- Skip sync with [skip tfc] commit message
- Clear documentation for SREs on manual runs

Workspaces:
- AWS Production: lornu-ai (terraform/aws/production)
- GCP: gcp-lornu-ai (terraform/gcp)

Fixes #354

--- a/.github/workflows/terraform-aws-prod.yml
+++ b/.github/workflows/terraform-aws-prod.yml
@@ -2,6 +2,13 @@ name: Terraform AWS Production
 
 on:
   workflow_call:
+  push:
+    branches:
+      - main
+      - kustomize
+    paths:
+      - 'terraform/aws/production/**'
+      - '.github/workflows/terraform-aws-prod.yml'
 
 permissions:
   id-token: write
