fix: update AWS TFC workspace name from lornu-ai to aws-kustomize
Update all references to AWS Terraform Cloud workspace:
- terraform/aws/production/backend.tf: workspace name
- .github/workflows/tfc-sync.yml: TF_WORKSPACE env var
- docs/TFC_MANUAL_RUNS.md: workspace references
- .github/system-instruction.md: workspace references
- terraform/aws/production/TFC_WORKSPACE_SETUP.md: workspace name
- docs/GITHUB_COMMENT_TEMPLATES.md: workspace references

Workspace mapping:
- AWS Production: aws-kustomize (terraform/aws/production)
- GCP: gcp-lornu-ai (terraform/gcp)

Fixes workspace name inconsistency in Issue #354

--- a/.github/workflows/tfc-sync.yml
+++ b/.github/workflows/tfc-sync.yml
@@ -21,7 +21,7 @@ jobs:
     env:
       TF_CLOUD_ORGANIZATION: "lornu-ai"
       TF_API_TOKEN: ${{ secrets.AWS_TF_API_TOKEN }}
-      TF_WORKSPACE: "lornu-ai"
+      TF_WORKSPACE: "aws-kustomize"
       CONFIG_DIRECTORY: "./terraform/aws/production"
     steps:
       - name: Checkout
