--- a/.github/workflows/tfc-sync.yml
+++ b/.github/workflows/tfc-sync.yml
@@ -57,7 +57,7 @@ jobs:
     env:
       TF_CLOUD_ORGANIZATION: "lornu-ai"
       TF_API_TOKEN: ${{ secrets.GCP_TF_API_TOKEN }}
-      TF_WORKSPACE: "gcp-lornu-ai"
+      TF_WORKSPACE: "gcp-kustomize"
       CONFIG_DIRECTORY: "./terraform/gcp"
     steps:
       - name: Checkout
