refactor: reorganize Terraform workflows and directory structure
- Rename terraform-aws-prod.yml -> terraform-aws.yml (main production workflow)
- Remove old terraform-aws.yml (staging/legacy, replaced by production workflow)
- Move terraform/aws/production/* -> terraform/aws/ (one config per hyperscaler)
- Update all workflow references to use terraform/aws/ instead of terraform/aws/production/
- Update secrets-manager.yml, stage1-acm.yml, stage2-cdn.yml paths
- Update multi-cloud-deploy.yml to reference terraform-aws.yml

Directory structure now consistent:
- terraform/aws/ (production - aws-kustomize workspace)
- terraform/aws/staging/ (staging - separate workspace)
- terraform/gcp/ (production - gcp-lornu-ai workspace)

This aligns with 'one Terraform config per hyperscaler' principle.

--- a/.github/workflows/secrets-manager.yml
+++ b/.github/workflows/secrets-manager.yml
@@ -9,8 +9,8 @@ on:
   push:
     branches: [ kustomize ]
     paths:
-      - "terraform/aws/production/secrets-manager.tf"
-      - "terraform/aws/production/secrets-variables.tf"
+      - "terraform/aws/secrets-manager.tf"
+      - "terraform/aws/secrets-variables.tf"
       - ".github/workflows/secrets-manager.yml"
 
 permissions:
@@ -38,14 +38,14 @@ jobs:
 
       - name: "Terraform Init"
         run: |
-          cd terraform/aws/production
+          cd terraform/aws
           terraform init -upgrade
 
       - name: "Terraform Plan (Secrets)"
         env:
           TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
         run: |
-          cd terraform/aws/production
+          cd terraform/aws
           terraform plan \
             -target=aws_secretsmanager_secret.resend_api_key \
             -target=aws_secretsmanager_secret_version.resend_api_key \
@@ -56,12 +56,12 @@ jobs:
         env:
           TF_VAR_resend_api_key: ${{ secrets.RESEND_API_KEY }}
         run: |
-          cd terraform/aws/production
+          cd terraform/aws
           terraform apply -auto-approve secrets.tfplan
 
       - name: "Output Secret ARNs"
         run: |
-          cd terraform/aws/production
+          cd terraform/aws
           echo "✅ Secrets synced to AWS Secrets Manager:"
           terraform output -raw resend_api_key_secret_arn
           terraform output -raw resend_api_key_secret_name
