--- a/.github/workflows/tfc-sync.yml
+++ b/.github/workflows/tfc-sync.yml
@@ -22,7 +22,7 @@ jobs:
       TF_CLOUD_ORGANIZATION: "lornu-ai"
       TF_API_TOKEN: ${{ secrets.AWS_TF_API_TOKEN }}
       TF_WORKSPACE: "aws-kustomize"
-      CONFIG_DIRECTORY: "./terraform/aws/production"
+      CONFIG_DIRECTORY: "./terraform/aws"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -57,7 +57,7 @@ jobs:
     env:
       TF_CLOUD_ORGANIZATION: "lornu-ai"
       TF_API_TOKEN: ${{ secrets.GCP_TF_API_TOKEN }}
-      TF_WORKSPACE: "gcp-kustomize"
+      TF_WORKSPACE: "gcp-lornu-ai"
       CONFIG_DIRECTORY: "./terraform/gcp"
     steps:
       - name: Checkout
