fix(ci): correct path for backend dependencies in E2E workflow
- Change working directory to packages/api before running uv sync
- Fixes 'No pyproject.toml found' error in E2E tests

--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Install Backend Dependencies
         run: |
-          cd ../..
+          cd ../../packages/api
           uv sync --frozen --no-dev
 
       - name: Start Backend API Server
