fix(ci): run backend server from packages/api directory
- Change to packages/api before running uv run uvicorn
- Fixes 'Failed to spawn: uvicorn' error
- uv run needs to be executed from the directory containing the venv

--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Start Backend API Server
         run: |
-          cd ../..
+          cd ../../packages/api
           uv run -- uvicorn packages.api.main:app --host 0.0.0.0 --port 8080 &
           sleep 5
           curl -f http://localhost:8080/api/health || exit 1
