fix: resolve merge conflicts with main and fix E2E PYTHONPATH
- Accept main branch versions of .gitignore and ingress.yaml
- Fix E2E workflow PYTHONPATH to resolve ModuleNotFoundError
- Set PYTHONPATH environment variable for uvicorn execution

--- a/.github/workflows/web-ci.yml
+++ b/.github/workflows/web-ci.yml
@@ -71,11 +71,13 @@ jobs:
       - name: Start Backend API Server
         run: |
           cd ../../packages/api
+          export PYTHONPATH="$(pwd)/../..:$PYTHONPATH"
           uv run -- uvicorn packages.api.main:app --host 0.0.0.0 --port 8080 &
           sleep 5
           curl -f http://localhost:8080/api/health || exit 1
         env:
           PORT: 8080
+          PYTHONPATH: ${{ github.workspace }}
 
       - name: Run Playwright Tests
         run: bun run playwright test
