--- a/.gitignore
+++ b/.gitignore
@@ -101,16 +101,24 @@ logs
 *.sln
 *.sw?
 
-# Build outputs
-dist/
-dist-worker/
-
-# Dependencies
-node_modules/
-.next/
-.venv/
+# Python
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+.eggs/
+*.egg-info/
+*.egg
 
-# Environment
-.env.local
-.env.*.local
+# Cloudflare Workers (use lornu-ai-dev fork for Cloudflare development)
+wrangler.toml
+apps/web/worker.ts
+.wrangler/
+.dev.vars
+.gemini/
