fix: add setup-gcloud action to GCP secrets workflow
The workflow was missing google-github-actions/setup-gcloud@v2, which is required
to install the gcloud CLI before using gcloud commands. Without this, the
'gcloud secrets versions add' and 'gcloud secrets describe' steps would fail.

Fixes: High severity issue where gcloud commands would fail on ubuntu-latest

--- a/.github/workflows/gcp-secrets-manager.yml
+++ b/.github/workflows/gcp-secrets-manager.yml
@@ -35,6 +35,9 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS_JSON }}
 
+      - name: "Set up Cloud SDK"
+        uses: google-github-actions/setup-gcloud@v2
+
       - name: "Setup Terraform"
         uses: hashicorp/setup-terraform@v2
         with:
