--- a/.github/workflows/terraform-aws-stage1-acm.yml
+++ b/.github/workflows/terraform-aws-stage1-acm.yml
@@ -68,9 +68,15 @@ jobs:
       - name: Set extra domain aliases for SAN certificate
         run: |
           domains=()
+          # Add DEV_DOMAIN if provided
+          if [ -n "${{ secrets.DEV_DOMAIN }}" ]; then
+            domains+=("${{ secrets.DEV_DOMAIN }}")
+          fi
+          # Add STAGE_DOMAIN if provided
           if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
             domains+=("${{ secrets.STAGE_DOMAIN }}")
           fi
+          # Add PROD_DOMAIN if provided (for SAN cert, even though it's the primary domain)
           if [ -n "${{ secrets.PROD_DOMAIN }}" ]; then
             # Add PROD_DOMAIN if not already present
             if [[ ! " ${domains[@]} " =~ "${{ secrets.PROD_DOMAIN }}" ]]; then
