--- a/.github/workflows/terraform-aws-stage2-cdn.yml
+++ b/.github/workflows/terraform-aws-stage2-cdn.yml
@@ -65,8 +65,26 @@ jobs:
 
       - name: Set extra domain aliases
         run: |
+          domains=()
+          # Add DEV_DOMAIN if provided
+          if [ -n "${{ secrets.DEV_DOMAIN }}" ]; then
+            domains+=("${{ secrets.DEV_DOMAIN }}")
+          fi
+          # Add STAGE_DOMAIN if provided
           if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
-            echo "TF_VAR_extra_domain_names=[\"${{ secrets.STAGE_DOMAIN }}\"]" >> "$GITHUB_ENV"
+            domains+=("${{ secrets.STAGE_DOMAIN }}")
+          fi
+          # Add PROD_DOMAIN if provided (for SAN cert)
+          if [ -n "${{ secrets.PROD_DOMAIN }}" ]; then
+            if [[ ! " ${domains[@]} " =~ "${{ secrets.PROD_DOMAIN }}" ]]; then
+              domains+=("${{ secrets.PROD_DOMAIN }}")
+            fi
+          fi
+          
+          # Convert array to JSON string
+          if [ ${#domains[@]} -gt 0 ]; then
+            json_domains=$(printf '%s\n' "${domains[@]}" | jq -R . | jq -s .)
+            echo "TF_VAR_extra_domain_names=$json_domains" >> "$GITHUB_ENV"
           else
             echo "TF_VAR_extra_domain_names=[]" >> "$GITHUB_ENV"
           fi
