feat: add DEV_DOMAIN to SAN certificate configuration
Add DEV_DOMAIN to the SAN certificate alongside STAGE_DOMAIN and PROD_DOMAIN.

Changes:
- Updated terraform-aws-stage1-acm.yml to include DEV_DOMAIN in extra_domain_names
- Updated terraform-aws.yml to include DEV_DOMAIN in extra_domain_names
- Updated terraform-aws-stage2-cdn.yml to include DEV_DOMAIN in extra_domain_names
- All three domains (DEV, STAGE, PROD) are now included in the SAN certificate

The SAN certificate will now cover:
- Primary: PROD_DOMAIN (from TF_VAR_domain_name)
- API: PROD_API_DOMAIN (from TF_VAR_api_domain)
- SAN: DEV_DOMAIN + STAGE_DOMAIN + PROD_DOMAIN (from TF_VAR_extra_domain_names)

This enables staging deployments to use the same certificate for all environments.

--- a/.github/workflows/terraform-aws.yml
+++ b/.github/workflows/terraform-aws.yml
@@ -64,8 +64,19 @@ jobs:
       - name: Set extra domain aliases for SAN certificate
         run: |
           domains=()
+          # Add DEV_DOMAIN if provided
+          if [ -n "${{ secrets.DEV_DOMAIN }}" ]; then
+            domains+=("${{ secrets.DEV_DOMAIN }}")
+          fi
+          # Add STAGE_DOMAIN if provided
           if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
             domains+=("${{ secrets.STAGE_DOMAIN }}")
+          fi
+          # Add PROD_DOMAIN if provided (for SAN cert)
+          if [ -n "${{ secrets.PROD_DOMAIN }}" ]; then
+            if [[ ! " ${domains[@]} " =~ "${{ secrets.PROD_DOMAIN }}" ]]; then
+              domains+=("${{ secrets.PROD_DOMAIN }}")
+            fi
           fi
 
           # Convert array to JSON string
@@ -128,8 +139,19 @@ jobs:
       - name: Set extra domain aliases for SAN certificate
         run: |
           domains=()
+          # Add DEV_DOMAIN if provided
+          if [ -n "${{ secrets.DEV_DOMAIN }}" ]; then
+            domains+=("${{ secrets.DEV_DOMAIN }}")
+          fi
+          # Add STAGE_DOMAIN if provided
           if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
             domains+=("${{ secrets.STAGE_DOMAIN }}")
+          fi
+          # Add PROD_DOMAIN if provided (for SAN cert)
+          if [ -n "${{ secrets.PROD_DOMAIN }}" ]; then
+            if [[ ! " ${domains[@]} " =~ "${{ secrets.PROD_DOMAIN }}" ]]; then
+              domains+=("${{ secrets.PROD_DOMAIN }}")
+            fi
           fi
 
           # Convert array to JSON string
