feat: add www.<domain> to SAN certificate for standardized domain structure
Update SAN certificate to include www.PROD_DOMAIN alongside the standardized
domain naming structure:
- DEV: d2.<domain> (DEV_DOMAIN)
- STAGING: s1.<domain> (STAGE_DOMAIN)
- PROD: <domain> (PROD_DOMAIN)
- PROD WWW: www.<domain> (www.PROD_DOMAIN)

The SAN certificate now includes all four domains for complete coverage.

--- a/.github/workflows/terraform-aws-stage1-acm.yml
+++ b/.github/workflows/terraform-aws-stage1-acm.yml
@@ -68,11 +68,11 @@ jobs:
       - name: Set extra domain aliases for SAN certificate
         run: |
           domains=()
-          # Add DEV_DOMAIN if provided
+          # Add DEV_DOMAIN if provided (d2.<domain>)
           if [ -n "${{ secrets.DEV_DOMAIN }}" ]; then
             domains+=("${{ secrets.DEV_DOMAIN }}")
           fi
-          # Add STAGE_DOMAIN if provided
+          # Add STAGE_DOMAIN if provided (s1.<domain>)
           if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
             domains+=("${{ secrets.STAGE_DOMAIN }}")
           fi
@@ -81,6 +81,11 @@ jobs:
             # Add PROD_DOMAIN if not already present
             if [[ ! " ${domains[@]} " =~ "${{ secrets.PROD_DOMAIN }}" ]]; then
               domains+=("${{ secrets.PROD_DOMAIN }}")
+            fi
+            # Add www.PROD_DOMAIN (www.<domain>)
+            www_domain="www.${{ secrets.PROD_DOMAIN }}"
+            if [[ ! " ${domains[@]} " =~ "$www_domain" ]]; then
+              domains+=("$www_domain")
             fi
           fi
           
