feat: add www domain variants to SAN certificate configuration
- terraform-aws-stage1-acm.yml: Add www.DEV_DOMAIN, www.STAGE_DOMAIN, www.PROD_DOMAIN
- terraform-aws.yml: Add www variants for both plan and apply stages
- terraform-aws-stage2-cdn.yml: Add www variants for CDN configuration

This ensures the SAN certificate covers all domain variants:
- Production: ${{ secrets.PROD_DOMAIN }} + www.${{ secrets.PROD_DOMAIN }}
- Staging: ${{ secrets.STAGE_DOMAIN }} + www.${{ secrets.STAGE_DOMAIN }}
- Development: ${{ secrets.DEV_DOMAIN }} + www.${{ secrets.DEV_DOMAIN }}

--- a/.github/workflows/terraform-aws-part1-acm.yml
+++ b/.github/workflows/terraform-aws-part1-acm.yml
@@ -68,21 +68,30 @@ jobs:
       - name: Set extra domain aliases for SAN certificate
         run: |
           domains=()
-          # Add DEV_DOMAIN if provided (d2.<domain>)
+          # Add DEV_DOMAIN if provided
           if [ -n "${{ secrets.DEV_DOMAIN }}" ]; then
             domains+=("${{ secrets.DEV_DOMAIN }}")
+            # Add www version of DEV_DOMAIN
+            www_dev="www.${{ secrets.DEV_DOMAIN }}"
+            if [[ ! " ${domains[@]} " =~ "$www_dev" ]]; then
+              domains+=("$www_dev")
+            fi
           fi
-          # Add STAGE_DOMAIN if provided (s1.<domain>)
+          # Add STAGE_DOMAIN if provided
           if [ -n "${{ secrets.STAGE_DOMAIN }}" ]; then
             domains+=("${{ secrets.STAGE_DOMAIN }}")
+            # Add www version of STAGE_DOMAIN
+            www_stage="www.${{ secrets.STAGE_DOMAIN }}"
+            if [[ ! " ${domains[@]} " =~ "$www_stage" ]]; then
+              domains+=("$www_stage")
+            fi
           fi
-          # Add PROD_DOMAIN if provided (for SAN cert, even though it's the primary domain)
+          # Add PROD_DOMAIN if provided
           if [ -n "${{ secrets.PROD_DOMAIN }}" ]; then
-            # Add PROD_DOMAIN if not already present
             if [[ ! " ${domains[@]} " =~ "${{ secrets.PROD_DOMAIN }}" ]]; then
               domains+=("${{ secrets.PROD_DOMAIN }}")
             fi
-            # Add www.PROD_DOMAIN (www.<domain>)
+            # Add www.PROD_DOMAIN
             www_domain="www.${{ secrets.PROD_DOMAIN }}"
             if [[ ! " ${domains[@]} " =~ "$www_domain" ]]; then
               domains+=("$www_domain")
