fix: only export ACM ARN after apply, handle missing output
The Export ACM ARN step was failing in plan mode because the certificate
doesn't exist yet. Only run this step when action == 'apply', and handle
the case where the output might not exist gracefully.

--- a/.github/workflows/terraform-aws-part1-acm.yml
+++ b/.github/workflows/terraform-aws-part1-acm.yml
@@ -146,6 +146,11 @@ jobs:
 
       - name: Export ACM ARN
         id: acm_arn
+        if: inputs.action == 'apply'
         run: |
-          arn="$(terraform -chdir=terraform/aws output -raw cloudfront_certificate_arn 2>/dev/null || true)"
-          echo "value=$arn" >> "$GITHUB_OUTPUT"
+          arn="$(terraform -chdir=terraform/aws output -raw cloudfront_certificate_arn 2>/dev/null || echo '')"
+          if [ -n "$arn" ]; then
+            echo "value=$arn" >> "$GITHUB_OUTPUT"
+          else
+            echo "value=" >> "$GITHUB_OUTPUT"
+          fi
