--- a/.github/workflows/terraform-gcp.yml
+++ b/.github/workflows/terraform-gcp.yml
@@ -69,7 +69,7 @@ jobs:
             })
 
       - name: Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
         uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
         with:
           run: ${{ steps.plan-run.outputs.run_id }}
